force-app/main/default/objects/GiftTransaction/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <description>Accounting cost center this grant payment posts against.</description>
    <label>Cost Center</label>
    <length>50</length>
    <type>Text</type>
</CustomField>