force-app/main/default/objects/GiftTransaction/fields/Credit_Card_Last_Four_Digits__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Last_Four_Digits__c</fullName>
    <label>Credit Card Last Four Digits</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>