force-app/main/default/objects/GiftTransaction/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <formula>IF(
    Donor.IsPersonAccount,
    TRIM(Donor.FirstName &amp; &quot; &quot; &amp; Donor.LastName),
    Donor.Name
)</formula>
    <label>Donor Name</label>
    <type>Text</type>
</CustomField>