force-app/main/default/objects/GiftTransaction/fields/Gift_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Gift_Commitment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Gift Commitment</label>
    <referenceTo>GiftCommitment</referenceTo>
    <relationshipLabel>Gift Transactions</relationshipLabel>
    <relationshipName>Gift_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>