force-app/main/default/objects/GiftTransaction/fields/Grant_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Payment_Date__c</fullName>
    <description>Date the reimbursement for this grant period actually landed in the bank. Blank while the period is still Requested. Named for grants rather than taking the OOTB Transaction Date because Transaction Date is used across every gift type and is set at entry; this is the settled-funds date a grant reconciliation is run against.</description>
    <inlineHelpText>Date the reimbursement hit the bank. Leave blank until the money is actually received.</inlineHelpText>
    <label>Grant Payment Date</label>
    <type>Date</type>
</CustomField>