force-app/main/default/objects/GiftTransaction/fields/In_Kind_Description__c.field-meta.xml
<CustomField>
    <fullName>In_Kind_Description__c</fullName>
    <label>In Kind Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>