force-app/main/default/objects/GiftTransaction/fields/In_Kind_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>In_Kind_Market_Value__c</fullName>
    <label>In Kind Market Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>