force-app/main/default/objects/GiftTransaction/fields/In_Kind_Type__c.field-meta.xml
<CustomField>
    <fullName>In_Kind_Type__c</fullName>
    <label>In Kind Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Goods</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>