force-app/main/default/objects/GiftTransaction/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <label>Integration Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kindful Fundraising</fullName>
            </value>
            <value>
                <fullName>Api.Qgiv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>