force-app/main/default/objects/GiftTransaction/fields/Integration_URL__c.field-meta.xml
<CustomField>
    <fullName>Integration_URL__c</fullName>
    <label>Integration URL</label>
    <type>Url</type>
</CustomField>