force-app/main/default/objects/GiftTransaction/fields/Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shares__c</fullName>
    <inlineHelpText>Quantity of shares transferred. Supports fractional shares to four decimal places.</inlineHelpText>
    <label>Number of Shares</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>