force-app/main/default/objects/GiftTransaction/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Deprecated. Use Transaction Date.</description>
    <label>Payment Date (DEPRECATED)</label>
    <type>Date</type>
</CustomField>