force-app/main/default/objects/GiftTransaction/fields/Period_Amount__c.field-meta.xml
<CustomField>
    <fullName>Period_Amount__c</fullName>
    <label>Period Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>