force-app/main/default/objects/GiftTransaction/fields/Period_Status__c.field-meta.xml
<CustomField>
    <fullName>Period_Status__c</fullName>
    <label>Period Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>