force-app/main/default/objects/GiftTransaction/fields/Relationship_to_ESSC__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_ESSC__c</fullName>
    <label>Relationship to ESSC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Participant</fullName>
            </value>
            <value>
                <fullName>Family/Friend of Participant(s)</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Organization, Corporation or Foundation</fullName>
            </value>
            <value>
                <fullName>Saw Commercial, Billboard, or other</fullName>
            </value>
            <value>
                <fullName>No direct connection, I support the mission</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>