force-app/main/default/objects/GiftTransaction/fields/Revenue_Code__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Code__c</fullName>
    <description>Accounting revenue code this grant payment posts against.</description>
    <label>Revenue Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>