force-app/main/default/objects/GiftTransaction/fields/Stock_Ticker__c.field-meta.xml
<CustomField>
    <fullName>Stock_Ticker__c</fullName>
    <inlineHelpText>Ticker symbol of the donated security, e.g. AAPL or BRK.B.</inlineHelpText>
    <label>Stock Ticker</label>
    <length>20</length>
    <type>Text</type>
</CustomField>