force-app/main/default/objects/GiftTransaction/fields/Stock_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Stock_Transfer_Date__c</fullName>
    <inlineHelpText>Date the shares landed in the ESSC brokerage account. Sale Date is the OOTB Transaction Completion Date.</inlineHelpText>
    <label>Stock Transfer Date</label>
    <type>Date</type>
</CustomField>