force-app/main/default/objects/GiftTransaction/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <description>Current status of the gift transaction (e.g., Pending, Paid, Written-Off).</description>
    <label>Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Written-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>