force-app/main/default/objects/GiftTransaction/fields/Write_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Amount__c</fullName>
    <description>Amount of this transaction that has been written off (full or partial).</description>
    <label>Write-Off Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>