force-app/main/default/objects/GiftTransaction/fields/Write_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Date__c</fullName>
    <description>Date the write-off was recorded.</description>
    <label>Write-Off Date</label>
    <type>Date</type>
</CustomField>