force-app/main/default/objects/GiftTransaction/fields/Write_Off_Reason__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Reason__c</fullName>
    <description>Reason the transaction was written off.</description>
    <label>Write-Off Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funder Non-Payment</fullName>
            </value>
            <value>
                <fullName>Grant Terminated</fullName>
            </value>
            <value>
                <fullName>Compliance Failure</fullName>
            </value>
            <value>
                <fullName>Budget Reallocation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>